[gd_scene load_steps=12 format=2]

[ext_resource path="res://pictures/character/DinoSprites - doux.png" type="Texture" id=1]
[ext_resource path="res://characters/blood_and_magic/BloodAndMagic.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/dinosaur_blue/DinosaurBlue.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.0
height = 6.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attacked"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=9]
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 16, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stand"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 4.0

[node name="Dino" type="KinematicBody2D"]
position = Vector2( 5, 10 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 19 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12, 11 )
texture = ExtResource( 1 )
hframes = 24
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 1 )
anims/attacked = SubResource( 2 )
anims/dead = SubResource( 9 )
anims/move = SubResource( 3 )
anims/run = SubResource( 4 )
anims/stand = SubResource( 6 )

[node name="Timer" type="Timer" parent="Sprite"]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 12, 12 )
shape = SubResource( 8 )

[node name="BloodAndMagic" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, -3 )
scale = Vector2( 0.05, 0.3 )
border_color = Color( 0.709804, 0.396078, 0.870588, 1 )
background_color = Color( 0, 0, 0, 0 )
foreground_color = Color( 0.92549, 0.0745098, 0.0745098, 1 )
hp_and_mp_value = 100

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Sprite/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
